[tool.poetry]
name = "RFT_CS"
version = "0.1.0"
description = "Rocket fuel and trajectory computing system"
authors = ["David2261 <bulatnasirov2003@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.0"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
